--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tinper repository boilerplate - tinper仓库基础规范",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/uba-templates/uba-boilerplate-repo#readme",
   "devDependencies": {
     "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "eslint": "^3.13.1"
   }
 }
